Issued a better fix for the totals not showing right in the new version of bootstrap.

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -63,12 +63,6 @@
   bottom: 0px;
 }
 
-#totals > div {
-  float: left;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
 .total_header {
   display: inline;
   font-size: 2.5em;
